# hacksim

./: .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt  vercel.json
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
apps/web/: .env.local.example  .env.production  .env.production.example  .gitignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOY_VERCEL.md  V2_MCP.md
docs/process/: 01-scaffold.md  02-readme.md  03-axl-submodule.md  04-protocol-envelopes.md  05-axl-client.md  06-peer-enumeration.md  07-two-node-integration.md  08-orchestrator-spawner.md  09-sse-hub.md  10-fastapi-app.md  11-hacksim-network-skill.md  12-role-worker-harness.md  13-bounty-designer.md  14-builder.md  15-builder-build-and-submit.md  16-artefact-serving.md  17-judge.md  18-organiser-and-choreography.md  19-web-scaffold.md  20-hero-page.md  21-live-page.md  22-runlog-sse.md  23-demo-modal.md  24-showcase-and-smoke.md  25-snapshot-accumulator.md  26-log-tailer.md  27-sim-controller.md  28-api-auto-start.md  29-role-emit-full-payloads.md  30-make-demo.md  31-hero-redesign.md  32-ethglobal-framing.md  33-live-page-refresh.md  34-one-sim-at-a-time.md  35-now-happening-banner.md  36-faq.md  37-anthropic-key-in-ui.md  38-code-tab-raw-file-proxy.md  39-readme-tab-in-modal.md  40-example-tile-spinup.md  (+33 more)
scripts/: build_axl.sh  run_demo.sh  smoke_e2e.py
tests/: test_smoke.py
(+130 files in other folders)
