[project]
name = "hacksim"
version = "0.0.1"
description = "An Agent Town on Gensyn AXL. Prompt a hackathon, agents run it, click winners and play."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "httpx>=0.27",        # used by orchestrator integration tests
]
orchestrator = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "aiohttp>=3.9",
  "sse-starlette>=2.0",
]
agents = [
  "anthropic>=0.40",    # optional; lazy-imported when ANTHROPIC_API_KEY is set
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
